declared to be deprecated and will be removed in the next TYPO3 versions.

* Removed classes prior to scheduled deprecation removal

t3lib_BEDisplayLog: This class was used only by the old belog module, its
functionality is now encapsulated in EXT:belog itself. Since it is very
unlikely that the class was used by other external extensions, the file was
removed instead of deprecating it.

Removed Functionality
-------------------------------------------------------------------------------

* Removed doNotLoadInFE flag

With TYPO3 4.3 the flag doNotLoadInFE flag was introduced in ext_emconf.php
extension files to hint the core that an extension has no frontend
functionality. The performance gain of this change in the frontend was minimal.
The flag is now removed and the according extList_FE setting in localconf.php
has no effect anymore.

* Removed system extension simulatestatic

The system extension to simulate static documents was removed from the core.
@TODO: Issue #36025 must be solved and this note here adapted, otherwise the
removal will be reverted.

* Removed TypoScript option noBlur

The ancient noBlur TypoScript setting for old Browsers (Internet Explorer <= 5.5)
was removed without alternative. The setting has no effect anymore and can be
removed from custom TypoScript objects, especially MENU.

===============================================================================
Changes and Improvements
===============================================================================

This will list all changes and improvements between TYPO3 4.7 and 6.0. For
technical details see ChangeLog included in the typo3_src package.

-------------------------------------------------------------------------------
General
-------------------------------------------------------------------------------

* Extbase and fluid always loaded

The core extensions 'extbase' and 'fluid' are used in core classes like t3lib